# pynocchio

./: .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  README.rst  setup.py
examples/: demo.py  pyglet_demo.py  vtk_pynocchio.py
src/: attachment.cpp  attachment.h  bindings.cpp  debugging.h  discretization.cpp  embedding.cpp  graphutils.cpp  indexer.h  intersector.h  lsqSolver.cpp  lsqSolver.h  math.hpp  mathutils.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  pinocchioApi.cpp  pinocchioApi.h  pointprojector.h  quaddisttree.h  rect.h  refinement.cpp  skeleton.cpp  skeleton.h  vector.h  vecutils.h
tests/: __init__.py  api.py  mesh.py  skeletons.py  transform.py  vector.py
